--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-service-template",
+  "name": "graphql-service-template",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
@@ -9,7 +9,9 @@
   ],
   "scripts": {
     "test": "echo 'Not configured'",
-    "build": "tsc",
+    "buildonly": "tsc",
+    "build": "npm-run-all buildonly copyfiles",
+    "copyfiles": "copyfiles --up 1 src/**/*.gql dist/",
     "start": "node .",
     "dev": "nodemon src/index.ts",
     "lint": "eslint",
@@ -22,21 +24,29 @@
     "@eslint/js": "^9.16.0",
     "@types/express": "^4.17.17",
     "@types/express-pino-logger": "^4.0.3",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^29.5.1",
+    "copyfiles": "^2.4.1",
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "globals": "^15.13.0",
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.4.2",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.4",
     "typescript-eslint": "^8.17.0"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^10.0.11",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-pino-logger": "^7.0.0",
+    "graphql": "^15.9.0",
+    "graphql-middleware": "^6.1.35",
+    "graphql-pino-middleware": "^0.0.2",
+    "graphql-yoga": "^5.10.4",
     "pino": "^8.14.1"
   }
 }
