--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,9 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noImplicitAny": true,
-    "skipLibCheck": false /* Skip type checking all .d.ts files. */,
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
     "declaration": true
   },
+  "assets": ["src/**/*.gql", "src/**/*.graphql"],
   "include": ["src"]
 }
